DOC-2087: -new-material-templates/…/nav.adoc
FIle: /-new-material-templates/plugin documentation templates/ROOT/nav.adoc

Edit: added comment line re this file being instructional only.

--- a/-new-material-templates/plugin documentation templates/ROOT/nav.adoc
+++ b/-new-material-templates/plugin documentation templates/ROOT/nav.adoc
@@ -9,3 +9,5 @@
 // Replace the boilerplate below with the file-name of the new open source plugin.
 // Also, place this new open source plugin into alphabetical place within the open source plugin sub-section.
 *** xref:<plugincode>.adoc[<pluginname>]
+
+// This file is instructional and is never included in the published name-space.
