--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -76,11 +76,13 @@ xref:6.0-release-notes-overview.adoc[{productname} 6.0]
 Release notes for {productname} 6.0
 
 // Dummy table cell.
-// 1. Remove the inline comment markup pre-pending this
-//    element when the number of cells in the table is
-//    odd.
-// 2. Prepend the inline comment markup to this element
-//    when the number of cells in the table is even.
+// 1. When the number of cells in the table is odd:
+//    * remove the inline comment markup pre-pending this
+//      element.
+//
+// 2. When the number of cells in the table is even:
+//    * prepend the inline comment markup to this
+//      element.
 //a|
 
 |===
