DOC-2087: /-new-material-templates/…/premium-plugins.adoc
File: /-new-material-templates/plugin-documentation-templates/ROOT/partials/index-pages/premium-plugins.adoc

Edit: typo correction.

--- a/-new-material-templates/plugin-documentation-templates/ROOT/partials/index-pages/premium-plugins.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/partials/index-pages/premium-plugins.adoc
@@ -1,4 +1,4 @@
-// Table row for an Premium plugin.
+// Table row for a Premium plugin.
 // Place this row into the extant table in `partials/index-pages/premium-plugins.adoc` in alphabetical order.
 
 a|
