DOC-2165: code.adoc & advcode.adoc
Include statements, pointing to `/partials/misc/code-dialog-and-selection-state.adoc`, added.

--- a/modules/ROOT/pages/code.adoc
+++ b/modules/ROOT/pages/code.adoc
@@ -18,6 +18,8 @@ tinymce.init({
 });
 ----
 
+include::partial$misc/code-dialog-and-selection-state.adoc[]
+
 include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
