--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -53,6 +53,7 @@ tinymce.init({
 });
 ----
 
+include::partial$misc/code-dialog-and-selection-state.adoc[]
 
 include::partial$configuration/advcode.adoc[]
 
