DOC-2165: code-dialog-and-selection-state.adoc
Missing comma is no longer missing.

Co-authored-by: Karl Kemister-Sheppard <karlkemistersheppard@gmail.com>

--- a/modules/ROOT/partials/misc/code-dialog-and-selection-state.adoc
+++ b/modules/ROOT/partials/misc/code-dialog-and-selection-state.adoc
@@ -1,6 +1,6 @@
 == Selection state when opening and closing the code editor
 
-The safest assumption is that selection state is not preserved when switching between the rich-text editor (ie the default {productname} editor instance) to the code editor dialog view of a {productname} document.
+The safest assumption is that selection state is not preserved when switching between the rich-text editor (ie, the default {productname} editor instance) to the code editor dialog view of a {productname} document.
 
 === Switching from the rich-text editor view to the code editor
 
