DOC-2163: premium-plugin-list.adoc
Markup edit.

--- a/modules/ROOT/partials/misc/premium-plugin-list.adoc
+++ b/modules/ROOT/partials/misc/premium-plugin-list.adoc
@@ -22,7 +22,7 @@ endif::[]
 * xref:permanentpen.adoc[Permanent Pen]
 * xref:introduction-to-powerpaste.adoc[PowerPaste]
 * xref:rtc-introduction.adoc[Real-Time Collaboration (RTC)]
-** include::partial$/misc/admon-rtc-eol.adoc[]
++ include::partial$/misc/admon-rtc-eol.adoc[]
 * xref:introduction-to-tiny-spellchecker.adoc[Spell Checker Pro]
 * xref:autocorrect.adoc[Spelling Autocorrect]
 * xref:tableofcontents.adoc[Table of Contents]
