--- a/-new-material-templates/release-notes-template/ROOT/partials/misc/supported-versions.adoc
+++ b/-new-material-templates/release-notes-template/ROOT/partials/misc/supported-versions.adoc
@@ -6,6 +6,8 @@ Supported versions of {productname}:
 [cols="^,^,^",options="header"]
 |===
 |Version |Release Date |End of Support
+// add new row with version, release date, and end-of-support date.
+// use the internal spreadsheet to calculate the end-of-support date from the release date.
 |6.6 |2023-07-19 |2025-01-19
 |6.5 |2023-06-21 |2024-12-21
 |6.4 |2023-03-29 |2024-09-29
@@ -26,3 +28,5 @@ To view our Software License Agreements, visit:
 * link:{legalpages}/tiny-self-hosted-oem-saas-agreement/[The {companyname} Self-Hosted Software License Agreement - (OEM & SaaS Users)].
 
 Support for Partner Plugins is provided by Partner companies and is not the responsibility of {companynameformal}. For information on Partner Plugins, see: link:{companyurl}/partners/[https://www.tiny.cloud/partners/].
+
+// This file is instructional and is never included in the published name-space.
