DOC-2169: changelog.adoc
Markup edits.

--- a/modules/ROOT/pages/changelog.adoc
+++ b/modules/ROOT/pages/changelog.adoc
@@ -14,7 +14,7 @@ NOTE: This is the {productname} Community version changelog. For information abo
 === Improved
 * Adding a newline after a table would, in some specific cases, not work.
 * Menus now have a slight margin at the top and bottom to more clearly separate them from the frame edge.
-* Updated **More** toolbar button tooltip text from *More...* to *Reveal or hide additional toolbar items*.
+* Updated **More** toolbar button tooltip text from _More..._ to _Reveal or hide additional toolbar items_.
 * Where multiple case sensitive variants of a translation key are provided, they will now all be preserved in the translation object instead of just the lowercase variant.
 * Improved screen reader announcements of the column and row selection in the grid presented by the **Table** menu and toolbar item.
 * Improved the keyboard focus visibility for links inside dialogs.
