--- a/modules/ROOT/pages/release-notes.adoc
+++ b/modules/ROOT/pages/release-notes.adoc
@@ -11,6 +11,12 @@ This section lists the releases for {productname} 6 and the changes made in each
 
 a|
 [.lead]
+xref:6.7-release-notes.adoc#overview[{productname} 6.7]
+
+Release notes for {productname} 6.7
+
+a|
+[.lead]
 xref:6.6.2-release-notes.adoc#overview[{productname} 6.6.2]
 
 Release notes for {productname} 6.6.2
@@ -95,7 +101,7 @@ Release notes for {productname} 6.0
 // 2. When the number of cells in the table is even:
 //    * prepend the inline comment markup to this
 //      element.
-a|
+//a|
 
 |===
 
