--- a/modules/ROOT/nav.adoc
+++ b/modules/ROOT/nav.adoc
@@ -403,6 +403,14 @@
 ** xref:tinymce-and-cors.adoc[Cross-Origin Resource Sharing (CORS)]
 * Release information
 ** xref:release-notes.adoc[Release notes for TinyMCE 6]
+*** TinyMCE 6.7
+**** xref:6.7-release-notes.adoc#overview[Overview]
+**** xref:6.7-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium plugin changes]
+**** xref:6.7-release-notes.adoc#accompanying-premium-skins-and-icon-packs-changes[Accompanying Premium Skins and Icon Packs changes]
+**** xref:6.7-release-notes.adoc#improvements[Improvements]
+**** xref:6.7-release-notes.adoc#additions[Additions]
+**** xref:6.7-release-notes.adoc#changes[Changes]
+**** xref:6.7-release-notes.adoc#bug-fixes[Bug fixes]
 *** TinyMCE 6.6.2
 **** xref:6.6.2-release-notes.adoc#overview[Overview]
 **** xref:6.6.2-release-notes.adoc#accompanying-premium-plugin-changes[Accompanying Premium Plugin changes]
