--- a/modules/ROOT/pages/keyboard-shortcuts.adoc
+++ b/modules/ROOT/pages/keyboard-shortcuts.adoc
@@ -11,32 +11,32 @@ This is a list of available keyboard shortcuts within the editor body.
 
 [cols=",,,",options="header"]
 |===
-|Action |PC |Mac |Core/Plugin
-|Bold |Ctrl+B |Command+B |core
-|Italic |Ctrl+I |Command+I |core
-|Underline |Ctrl+U |Command+U |core
-|Select All |Ctrl+A |Command+A |core
-|Redo |Ctrl+Y / Ctrl+Shift+Z |Command+Y / Command+Shift+Z |core
-|Undo |Ctrl+Z |Command+Z |core
-|Header 1 |Alt+Shift+1 |Ctrl+Option+1 |core
-|Header 2 |Alt+Shift+2 |Ctrl+Option+2 |core
-|Header 3 |Alt+Shift+3 |Ctrl+Option+3 |core
-|Header 4 |Alt+Shift+4 |Ctrl+Option+4 |core
-|Header 5 |Alt+Shift+5 |Ctrl+Option+5 |core
-|Header 6 |Alt+Shift+6 |Ctrl+Option+6 |core
-|Paragraph |Alt+Shift+7 |Ctrl+Option+7 |core
-|Div |Alt+Shift+8 |Ctrl+Option+8 |core
-|Address |Alt+Shift+9 |Ctrl+Option+9 |core
-|Focus to menu bar |Alt+F9 |Option+F9 |core
-|Focus to toolbar |Alt+F10 |Option+F10 |core
-|Focus to element path |Alt+F11 |Option+F11 |core
+|Action |Windows or Linux |macOS |Core/Plugin
+|Bold |Ctrl+B |⌘+B |core
+|Italic |Ctrl+I |⌘+I |core
+|Underline |Ctrl+U |⌘+U |core
+|Select All |Ctrl+A |⌘+A |core
+|Redo |Ctrl+Y / Ctrl+Shift+Z |⌘+Y / ⌘+Shift+Z |core
+|Undo |Ctrl+Z |⌘+Z |core
+|Header 1 |Alt+Shift+1 |Ctrl+⌥+1 |core
+|Header 2 |Alt+Shift+2 |Ctrl+⌥+2 |core
+|Header 3 |Alt+Shift+3 |Ctrl+⌥+3 |core
+|Header 4 |Alt+Shift+4 |Ctrl+⌥+4 |core
+|Header 5 |Alt+Shift+5 |Ctrl+⌥+5 |core
+|Header 6 |Alt+Shift+6 |Ctrl+⌥+6 |core
+|Paragraph |Alt+Shift+7 |Ctrl+⌥+7 |core
+|Div |Alt+Shift+8 |Ctrl+⌥+8 |core
+|Address |Alt+Shift+9 |Ctrl+⌥+9 |core
+|Focus to menu bar |Alt+F9 |⌥+F9 |core
+|Focus to toolbar |Alt+F10 |⌥+F10 |core
+|Focus to element path |Alt+F11 |⌥+F11 |core
 |Focus to contextual toolbar |Ctrl+F9 |Ctrl+F9 |core
-|Print |Ctrl+P |Command+P |core
-|Open the help dialog |Alt+0 |Option+0 |xref:help.adoc[help]
-|Insert link |Ctrl+K |Command+K |xref:link.adoc[link]
-|Toggle Fullscreen |Ctrl+Shift+F |Command+Shift+F |xref:fullscreen.adoc[fullscreen]
-|Save |Ctrl+S |Command+S |xref:save.adoc[save]
-|Find |Ctrl+F |Command+F |xref:searchreplace.adoc[searchreplace]
+|Print |Ctrl+P |⌘+P |core
+|Open the {productname} Help dialog |Alt+0 |⌥+0 |xref:help.adoc[help]
+|Insert link |Ctrl+K |⌘+K |xref:link.adoc[link]
+|Toggle Fullscreen |Ctrl+Shift+F |⌘+Shift+F |xref:fullscreen.adoc[fullscreen]
+|Save |Ctrl+S |⌘+S |xref:save.adoc[save]
+|Find |Ctrl+F |⌘+F |xref:searchreplace.adoc[searchreplace]
 |===
 
 == Accessibility keyboard shortcuts
@@ -45,7 +45,7 @@ This is a list of available keyboard shortcuts within the editor user interface.
 
 [cols=",,",options="header"]
 |===
-|Action |PC |Mac
+|Action |Windows or Linux |macOS
 |Execute command |Enter / Spacebar |Enter / Spacebar
 |Focus on next UI Element(such as: Menu bar, Toolbar, Toolbar Group, Status Bar Item) |Tab |Tab
 |Focus on previous UI Element(such as: Menu bar, Toolbar, Toolbar Group, Status Bar Item) |Shift+Tab |Shift+Tab
