DOC-2027: help_accessibility.adoc
Turned mention of Help plugin into xref pointing to help.adoc.

--- a/modules/ROOT/partials/configuration/help_accessibility.adoc
+++ b/modules/ROOT/partials/configuration/help_accessibility.adoc
@@ -3,7 +3,7 @@
 
 include::partial$misc/admon-requires-6.7v.adoc
 
-When the *Help* plugin is loaded, the {productname} editor displays the keyboard shortcut for accessing the Help dialog in the {productname} status bar by default.
+When the xref:help.adoc[Help] plugin is loaded, the {productname} editor displays the keyboard shortcut for accessing the Help dialog in the {productname} status bar by default.
 
 The `help_accessibility` option allows for this display to be turned off.
 
