DOC-2027: accessibility.adoc
Added include statement pointing to `/modules/ROOT/partials/configuration/help_accessibility.adoc`.

--- a/modules/ROOT/pages/accessibility.adoc
+++ b/modules/ROOT/pages/accessibility.adoc
@@ -10,3 +10,5 @@ include::partial$configuration/highlight_on_focus.adoc[]
 include::partial$configuration/iframe_aria_text.adoc[]
 
 include::partial$configuration/taborder.adoc[]
+
+include::partial$configuration/help_accessibility.adoc[]
