DOC-2027: help.adoc
Paragraphing.

--- a/modules/ROOT/pages/help.adoc
+++ b/modules/ROOT/pages/help.adoc
@@ -12,7 +12,9 @@ The help plugin adds a button and/or menu item that opens a dialog showing four 
 |Tab display name |Tab configuration name |Purpose
 |Handy shortcuts |`shortcuts` |Presents keyboard shortcuts available in the {productname} editor.
 |Keyboard Navigation |`keyboardnav` |Documents the keyboard-based options for navigating and controlling the entire {productname} editor.
-|Plugins |`plugins` |Lists the installed plugins for the {productname} instance, with links to the relevant {productname} documentation. Also presents a list of available {productname} Premium plugins.
+|Plugins |`plugins` |Lists the installed plugins for the {productname} instance, with links to the relevant {productname} documentation.
+
+ Also presents a list of available {productname} Premium plugins.
 |Version |`versions` |Displays the {productname} version.
 |===
 
