DOC-2027: help_accessibility.adoc
Markup correction.

--- a/modules/ROOT/partials/configuration/help_accessibility.adoc
+++ b/modules/ROOT/partials/configuration/help_accessibility.adoc
@@ -1,7 +1,7 @@
 [[help_accessibility]]
 == `help_accessibility`
 
-include::partial$misc/admon-requires-6.7v.adoc
+include::partial$misc/admon-requires-6.7v.adoc[]
 
 When the xref:help.adoc[Help] plugin is loaded, the {productname} editor displays the keyboard shortcut for accessing the Help dialog in the {productname} status bar by default.
 
