DOC-2176: multiple files
1. Commented out include statement adding `misc/purchase-premium-plugins.adoc` to almost every Premium plugin page.

2. Added notes to `pluginpage.adoc` in `-new-material-templates/plugin-documentation-templates/ROOT/pages/` regarding the need to update the logic in purchase-premium-plugins.adoc.

3. Added a NOTE to `premium-skins-and-icons.adoc` about premium skins only being available with a TinyMCE subscription.

4. Placed include statement pointing to `misc/purchase-premium-plugins.adoc`, and surrounding variables, in a comment block.

5. Added comment to head of `misc/purchase-premium-plugins.adoc` regarding the need to update the logic therein.

--- a/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
+++ b/-new-material-templates/plugin-documentation-templates/ROOT/pages/pluginpage.adoc
@@ -28,7 +28,13 @@ liveDemo::{plugincode}[]
 
 // Logic for customising what presents from this included file relies on
 // the :pluginminimumplan: attribute value above.
-include::partial$misc/purchase-premium-plugins.adoc[]
+//
+// 2023-09-06 addendum: the logic in purchase-premium-plugins.adoc needs
+// updating to match the available commercial plans.
+// 
+// Do not include this statement in new documentation until
+// this logic has been updated.
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
