--- a/modules/ROOT/pages/a11ychecker.adoc
+++ b/modules/ROOT/pages/a11ychecker.adoc
@@ -16,7 +16,7 @@ The `+a11ychecker+` premium plugin allows you to check the HTML in the editor fo
 
 liveDemo::a11ychecker[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
