--- a/modules/ROOT/pages/advcode.adoc
+++ b/modules/ROOT/pages/advcode.adoc
@@ -26,7 +26,7 @@ NOTE: For the {pluginname} to offer a full-screen mode requires the xref:fullscr
 
 liveDemo::advcode[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Example: basic setup
 
