--- a/modules/ROOT/pages/advtable.adoc
+++ b/modules/ROOT/pages/advtable.adoc
@@ -18,7 +18,7 @@ The `+advtable+` plugin is a premium plugin that extends the core xref:table.ado
 
 liveDemo::advtable[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Enabling the Advanced Tables plugin
 
