--- a/modules/ROOT/pages/autocorrect.adoc
+++ b/modules/ROOT/pages/autocorrect.adoc
@@ -17,7 +17,7 @@ The {pluginname} plugin allows {productname} to autocorrect a specified set of s
 
 liveDemo::autocorrect[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
