--- a/modules/ROOT/pages/casechange.adoc
+++ b/modules/ROOT/pages/casechange.adoc
@@ -14,7 +14,7 @@ The *Case Change* plugin is a time saving and handy extension that allows changi
 
 liveDemo::casechange[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Changing the case of selected text
 
