--- a/modules/ROOT/pages/checklist.adoc
+++ b/modules/ROOT/pages/checklist.adoc
@@ -16,7 +16,7 @@ In the {productname} editor, checklists are presented as lists with small checkb
 
 liveDemo::checklist[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Creating a Checklist
 
