--- a/modules/ROOT/pages/footnotes.adoc
+++ b/modules/ROOT/pages/footnotes.adoc
@@ -20,7 +20,7 @@ The plugin then adds a new line to the footnotes section located at the bottom o
 
 liveDemo::footnotes[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
