--- a/modules/ROOT/pages/formatpainter.adoc
+++ b/modules/ROOT/pages/formatpainter.adoc
@@ -17,7 +17,7 @@ The format painter retains the formatting after application making it possible t
 
 liveDemo::format-painter[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
