--- a/modules/ROOT/pages/introduction-to-mediaembed.adoc
+++ b/modules/ROOT/pages/introduction-to-mediaembed.adoc
@@ -14,7 +14,7 @@ The *Enhanced Media Embed* plugin is a link:{pricingpage}/[premium {productname}
 
 liveDemo::mediaembed[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Installation
 
