--- a/modules/ROOT/pages/introduction-to-powerpaste.adoc
+++ b/modules/ROOT/pages/introduction-to-powerpaste.adoc
@@ -16,7 +16,7 @@ NOTE: Due to limitations in Microsoft Excel online (part of Office Live) PowerPa
 
 liveDemo::paste-from-word[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Usage
 
