--- a/modules/ROOT/pages/introduction-to-tiny-comments.adoc
+++ b/modules/ROOT/pages/introduction-to-tiny-comments.adoc
@@ -45,7 +45,7 @@ The following example shows how to configure the Comments plugin in *embedded* m
 
 liveDemo::comments-embedded[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 [[getting-started-with-the-comments-plugin-selecting-a-mode]]
 == Getting started with the Comments plugin - Selecting a mode
