--- a/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
+++ b/modules/ROOT/pages/introduction-to-tiny-spellchecker.adoc
@@ -14,7 +14,7 @@ include::partial$misc/admon-premium-plugin.adoc[]
 
 liveDemo::spellcheckerpro[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Cloud Installation
 
