--- a/modules/ROOT/pages/linkchecker.adoc
+++ b/modules/ROOT/pages/linkchecker.adoc
@@ -16,7 +16,7 @@ The Link Checker plugin relies on HTTP response status codes to determine if a l
 
 liveDemo::linkchecker[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Cloud Instructions
 
