--- a/modules/ROOT/pages/mentions.adoc
+++ b/modules/ROOT/pages/mentions.adoc
@@ -14,7 +14,7 @@ The mentions plugin will present a list of users when a user types the "@" symbo
 
 liveDemo::mentions[height="400"]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Options
 
