--- a/modules/ROOT/pages/mergetags.adoc
+++ b/modules/ROOT/pages/mergetags.adoc
@@ -20,7 +20,7 @@ Once a merge tag is inserted, the plugin leaves a non-editable variable wrapped 
 
 liveDemo::merge-tag[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
