--- a/modules/ROOT/pages/pageembed.adoc
+++ b/modules/ROOT/pages/pageembed.adoc
@@ -19,7 +19,7 @@ The *Page Embed* plugin embeds a page in the content using an iframe (Inline fra
 
 liveDemo::page-embed[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Creating a Page Embed toolbar button
 
