--- a/modules/ROOT/pages/permanentpen.adoc
+++ b/modules/ROOT/pages/permanentpen.adoc
@@ -34,7 +34,7 @@ For more information on {productname} formats, refer to the xref:content-formatt
 
 liveDemo::permanent-pen[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Using a Permanent Pen
 
