--- a/modules/ROOT/pages/tableofcontents.adoc
+++ b/modules/ROOT/pages/tableofcontents.adoc
@@ -16,7 +16,7 @@ NOTE: In previous versions of {productname} the {pluginname} plugin was provided
 
 liveDemo::tableofcontents[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Basic setup
 
