--- a/modules/ROOT/pages/tinydrive-introduction.adoc
+++ b/modules/ROOT/pages/tinydrive-introduction.adoc
@@ -34,7 +34,7 @@ The storage and bandwidth quota varies based upon your link:{pricingpage}/[{clou
 
 liveDemo::drive[]
 
-include::partial$misc/purchase-premium-plugins.adoc[]
+// include::partial$misc/purchase-premium-plugins.adoc[]
 
 == Upload files URL
 
