--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -344,6 +344,13 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === The `color_cols` option was not respected when set to the value 5 with a custom `color_map` specified
 // TINY-10126
+Previously, when `color_cols: 5` was set, the assigned value was not used.
+
+Instead, when `color_cols` was set to the default number of columns displayed by a {productname} color selection grid (ie 5), the default method for calculating the number of displayed columns is used.
+
+For {productname} 6.7, the logic for calculating the default `color_cols` values was re-written. As of this release, {productname} now uses either the `color_cols` option, with its default calculated on the base color map, or the value calculated by custom color maps.
+
+This ensures a set `color_cols` value is always used, even when that value matches the default value.
 
 === In Safari on macOS, deleting backwards within a `<summary>` element removed the entire `<details>` element if it had no other content
 // TINY-10123
