--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -341,6 +341,11 @@ For information on using premium skins and icon packs, see: xref:premium-skins-a
 
 === An empty element with a `contenteditable="true"` attribute within a noneditable root was deleted when the Backspace key was pressed
 // TINY-10011
+Previously, when an empty `contenteditable="true"` element was set within a `contenteditable="false"` root, the element was deleted after pressing the `Backspace` key.
+
+As a consequence, upon pressing the Backspace key the editor would prune any redundant formatting elements without text. This resulted in call to `dom.isEmpty(body)` that returned a `true` value, even if the body has an empty `contenteditable="true"` element. {productname} introduced a solution in version `6.7` to preserve such empty `contenteditable="true"` elements from being treated as redundant content.
+
+As a result, empty `contenteditable="true"` elements are not deleted on Backspace key pressing.
 
 === The `color_cols` option was not respected when set to the value 5 with a custom `color_map` specified
 // TINY-10126
