DOC-2171_TINY-9976_TINY-9973: advanced-templates.adoc
Added ID to Commands sub-section.

--- a/modules/ROOT/pages/advanced-templates.adoc
+++ b/modules/ROOT/pages/advanced-templates.adoc
@@ -167,6 +167,7 @@ include::partial$misc/plugin-toolbar-button-id-boilerplate.adoc[]
 
 include::partial$misc/plugin-menu-item-id-boilerplate.adoc[]
 
+[[commands]]
 == Commands
 
 The {pluginname} plugin provides the following {productname} commands.
