--- a/modules/ROOT/pages/6.7-release-notes.adoc
+++ b/modules/ROOT/pages/6.7-release-notes.adoc
@@ -70,7 +70,7 @@ The string to add is as follows: `+{{mce-cursor}}+`.
 
 Wherever this string is within a template is where the insertion point appears when that template is added to a {productname} document.
 
-For more information, and and an interactive demonstration, see the xref:advanced-templates.adoc#the-insertion-point-marker[The Insertion Point Marker] section of the xref:advanced-templates.adoc[Advanced Templates] documentation.
+For more information, and an interactive demonstration, see the xref:advanced-templates.adoc#the-insertion-point-marker[The Insertion Point Marker] section of the xref:advanced-templates.adoc[Advanced Templates] documentation.
 
 
 === AI Assistant 1.1.0
